samples/_failures_safe/1761625793_044e26_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f733c468.c: In function ‘main’:
./samples/SAFE/__tmp_f733c468.c:151:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  151 |     char input
      |     ^~~~
./samples/SAFE/__tmp_f733c468.c:151:5: error: expected declaration or statement at end of input
